--- a/components/site-layout/index.marko
+++ b/components/site-layout/index.marko
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <title>${data.title ? data.title + ' | Marko' : 'Marko'}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/mdb.min.css" rel="stylesheet"/>
-    <link href="css/style.min.css" rel="stylesheet"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
+    <title>
+      <${input.title}/>
+    </title>
+    <${input.styles}/>
   </head>
-  <body class=data.class>
-    <include(data.renderBody)/>
+  <body class=input.class>
+    <${input.body}/>
+    <${input.scripts}/>
+    <browser-refresh enabled=true/>
   </body>
 </html>
