--- a/routes/index/index.marko
+++ b/routes/index/index.marko
@@ -1,3 +1,12 @@
 <site-layout>
-  <nav/>
+  <@styles>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
+  </@styles>
+  <@scripts>
+    <script src="/dist/bundle.js"/>
+  </@scripts>
+  <@title>Van Doctor Marko</@title>
+  <@body>
+    <nav/>
+  </@body>
 </site-layout>
