--- a/routes/index/components/nav/index.marko
+++ b/routes/index/components/nav/index.marko
@@ -1,51 +1,1 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar top-nav-collapse">
-  <div class="container">
-    <!-- Brand -->
-    <a class="navbar-brand" href="" target="_blank">
-      <strong>VAN DOCTOR</strong>
-    </a>
-    <!-- Collapse -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"/>
-    </button>
-    <!-- Links -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Left -->
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link waves-effect waves-light" href="#">
-            Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light" href="" target="_blank">About Liao</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light" href="" target="_blank">Free download</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light" href="" target="_blank">Free tutorials</a>
-        </li>
-      </ul>
-      <!-- Right -->
-      <ul class="navbar-nav nav-flex-icons">
-        <li class="nav-item">
-          <a href="" class="nav-link waves-effect waves-light" target="_blank">
-            <i class="fa fa-facebook"/>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="" class="nav-link waves-effect waves-light" target="_blank">
-            <i class="fa fa-twitter"/>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="" class="nav-link border border-light rounded waves-effect waves-light" target="_blank">
-            <i class="fa fa-github mr-2"/>Van Doctor
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<h1>Hello World</h1>
