--- a/routes/index/index.marko
+++ b/routes/index/index.marko
@@ -1,12 +1,13 @@
 <site-layout>
   <@styles>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link href="/dist/style.css" media="all" rel="stylesheet"/>
   </@styles>
   <@scripts>
     <script src="/dist/bundle.js"/>
   </@scripts>
   <@title>Van Doctor Marko</@title>
   <@body>
-    <nav/>
+    <navbar/>
   </@body>
 </site-layout>
