--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -17,18 +17,15 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong>Meet Best Doctor on Van Doctor</strong>
             </h1>
             <p>
-              <strong>Best &amp; free guide of responsive web design</strong>
+              <strong>Best &amp; free guide of vancouver doctor</strong>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>
-  The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written versions
-                                                              available. Create your own, stunning website.
-              </strong>
+              <strong>The most comprehensive tutorial for the meet doctor in Vancouver. Loved by over 500 000 users. Meetup and registion available. Meet your best doctor today.</strong>
             </p>
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg waves-effect waves-light">
+            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
               Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
@@ -46,18 +43,15 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong>Todos</strong>
             </h1>
             <p>
-              <strong>Best &amp; free guide of responsive web design</strong>
+              <strong/>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>
-  The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written versions
-                                                              available. Create your own, stunning website.
-              </strong>
+              <strong/>
             </p>
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg waves-effect waves-light">
+            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
               Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
@@ -79,18 +73,15 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong/>
             </h1>
             <p>
-              <strong>Best &amp; free guide of responsive web design</strong>
+              <strong/>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>
-  The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written versions
-                                                              available. Create your own, stunning website.
-              </strong>
+              <strong/>
             </p>
-            <a target="_blank" href="https://mdbootstrap.com/bootstrap-tutorial/" class="btn btn-outline-white btn-lg waves-effect waves-light">
+            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
               Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
