--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -1,7 +1,7 @@
 <div id="carousel-example-lz" class="carousel slide carousel-fade">
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-1z" data-slide-to="0" class=""/>
-    <li data-target="#carousel-example-1z" data-slide-to="1" class="active"/>
+    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"/>
+    <li data-target="#carousel-example-1z" data-slide-to="1" class=""/>
     <li data-target="#carousel-example-1z" data-slide-to="2" class=""/>
   </ol>
   <div class="carousel-inner" role="listbox">
@@ -23,10 +23,10 @@
               <strong>Best &amp; free guide of vancouver doctor</strong>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>The most comprehensive tutorial for the meet doctor in Vancouver. Loved by over 500 000 users. Meetup and registion available. Meet your best doctor today.</strong>
+              <strong>The most comprehensive trial for the meet doctor in Vancouver. Loved by over 500 000 users. Meetup and registion available. Meet your best doctor today.</strong>
             </p>
             <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
+              Start free trial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
           <!-- Content -->
@@ -52,7 +52,7 @@
               <strong/>
             </p>
             <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
+              Start free trial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
           <!-- Content -->
@@ -82,7 +82,7 @@
               <strong/>
             </p>
             <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              Start free tutorial <i class="fa fa-graduation-cap ml-2"/>
+              Start free trial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
           <!-- Content -->
