--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -17,16 +17,16 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
             <h1 class="mb-4">
-              <strong>Meet Best Doctor on Van Doctor</strong>
+              <strong>廖氏中医养生馆</strong>
             </h1>
             <p>
-              <strong>Best &amp; free guide of vancouver doctor</strong>
+              <strong>温哥华 白石镇</strong>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>The most comprehensive trial for the meet doctor in Vancouver. Loved by over 500 000 users. Meetup and registion available. Meet your best doctor today.</strong>
+              <strong>服务项目：针灸，按摩，足疗，美容，激光治疗，中药；地址：15212 North Bluff Rd. White Rock (152 St.夹16 Ave.)；电话：778-895-0675</strong>
             </p>
             <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              Start free trial <i class="fa fa-graduation-cap ml-2"/>
+              联系我们 <i class="fa fa-phone ml-2"/>
             </a>
           </div>
           <!-- Content -->
