--- a/routes/index/components/navbar/index.marko
+++ b/routes/index/components/navbar/index.marko
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
     <a class="navbar-brand" href="" target="_blank">
-      <strong>Van Doctor</strong>
+      <strong>廖氏</strong>
     </a>
   </div>
 </nav>
