--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -20,10 +20,10 @@
               <strong>廖氏中医养生馆</strong>
             </h1>
             <p>
-              <strong>温哥华 白石镇</strong>
+              <strong>服务项目：针灸，按摩，足疗，美容，激光治疗，中药</strong>
             </p>
             <p class="mb-4 d-none d-md-block">
-              <strong>服务项目：针灸，按摩，足疗，美容，激光治疗，中药；地址：15212 North Bluff Rd. White Rock (152 St.夹16 Ave.)；电话：778-895-0675</strong>
+              <strong>地址：温哥华 白石镇 15212 North Bluff Rd. White Rock (152 St.夹16 Ave.)；电话：778-895-0675</strong>
             </p>
             <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
               联系我们 <i class="fa fa-phone ml-2"/>
