--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -1,8 +1,8 @@
 <div id="carousel-example-lz" class="carousel slide carousel-fade">
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"/>
-    <li data-target="#carousel-example-1z" data-slide-to="1" class=""/>
-    <li data-target="#carousel-example-1z" data-slide-to="2" class=""/>
+    <li data-target="" data-slide-to="0" class="active"/>
+    <li data-target="" data-slide-to="1" class=""/>
+    <li data-target="" data-slide-to="2" class=""/>
   </ol>
   <div class="carousel-inner" role="listbox">
     <!--First slide-->
@@ -25,8 +25,8 @@
             <p class="mb-4 d-none d-md-block">
               <strong>地址：温哥华 白石镇 15212 North Bluff Rd. White Rock (152 St.夹16 Ave.)；电话：778-895-0675</strong>
             </p>
-            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              联系我们 <i class="fa fa-phone ml-2"/>
+            <a target="_blank" href="javascript:void(0);" class="btn btn-outline-white btn-lg waves-effect waves-light">
+              联系我们 <i class="fa afa-phone ml-2"/>
             </a>
           </div>
           <!-- Content -->
@@ -51,7 +51,7 @@
             <p class="mb-4 d-none d-md-block">
               <strong/>
             </p>
-            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
+            <a target="_blank" href="javascript:void(0);" class="btn btn-outline-white btn-lg waves-effect waves-light">
               Start free trial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
@@ -81,7 +81,7 @@
             <p class="mb-4 d-none d-md-block">
               <strong/>
             </p>
-            <a target="_blank" href="" class="btn btn-outline-white btn-lg waves-effect waves-light">
+            <a target="_blank" href="javascript:void(0);" class="btn btn-outline-white btn-lg waves-effect waves-light">
               Start free trial <i class="fa fa-graduation-cap ml-2"/>
             </a>
           </div>
@@ -92,11 +92,11 @@
     </div>
     <!--/Third slide-->
   </div>
-  <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="javascript:void(0);" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"/>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+  <a class="carousel-control-next" href="javascript:void(0);" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"/>
     <span class="sr-only">Next</span>
   </a>
