--- a/routes/index/components/carousel/index.marko
+++ b/routes/index/components/carousel/index.marko
@@ -26,7 +26,7 @@
               <strong>地址：温哥华 白石镇 15212 North Bluff Rd. White Rock (152 St.夹16 Ave.)；电话：778-895-0675</strong>
             </p>
             <a target="_blank" href="javascript:void(0);" class="btn btn-outline-white btn-lg waves-effect waves-light">
-              联系我们 <i class="fa afa-phone ml-2"/>
+              联系我们 <i class="fa fa-phone ml-2"/>
             </a>
           </div>
           <!-- Content -->
