--- a/routes/index/components/container/components/introduction/index.marko
+++ b/routes/index/components/container/components/introduction/index.marko
@@ -3,26 +3,25 @@
   <div class="row">
     <!--Grid column-->
     <div class="col-md-6 mb-4">
-      <img src="http://img.hb.aicdn.com/2837d380e92a51a57c5d44f227a495df440dff411d887-YedAkP_fw658" class="img-fluid z-depth-1-half" alt=""/>
+      <img src="dist/img/page/room-design.png" class="img-fluid z-depth-1-half" alt=""/>
     </div>
     <!--Grid column-->
     <!--Grid column-->
     <div class="col-md-6 mb-4">
       <!-- Main heading -->
-      <h3 class="h3 mb-3">Vancouver Doctor</h3>
-      <p>Introduction</p>
-      <p>Read details below to learn more about VanDoctor.</p>
+      <h3 class="h3 mb-3">廖氏中医养生馆</h3>
+      <p>位于温哥华白石镇的高端中医养生中心</p>
+      <p>本馆拥有全球顶尖数字化设备</p>
       <!-- Main heading -->
       <hr/>
-      <p>
-        <strong>40+</strong> best doctors <strong>Free for personal use.</strong>
-      </p>
+      <p>创始人廖医生出生于北京医学世家, 毕业于北京中医药大学针灸专业</p>
+      <p>拥有超20年针灸执业经验, 历任温哥华中医针灸协会会长</p>
       <!-- CTA -->
-      <a target="_blank" href="" class="btn btn-grey btn-md waves-effect waves-light">
-        On Line Chat <i class="fa fa-comments ml-1"/>
+      <a href="/OnlineChat" class="btn btn-grey btn-md waves-effect waves-light">
+        在线咨询 <i class="fa fa-comments ml-1"/>
       </a>
-      <a target="_blank" href="" class="btn btn-grey btn-md waves-effect waves-light">
-        Registration <i class="fa fa-registered ml-1"/>
+      <a href="/Reservation" class="btn btn-grey btn-md waves-effect waves-light">
+        就诊预约 <i class="fa fa-registered ml-1"/>
       </a>
     </div>
     <!--Grid column-->
