--- a/routes/index/components/page-footer/index.marko
+++ b/routes/index/components/page-footer/index.marko
@@ -1,47 +1,28 @@
 <footer class="page-footer text-center font-small mt-4 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
-  <!--Call to action-->
-  <div class="pt-4">
-    <a class="btn btn-outline-white waves-effect waves-light" href="" target="_blank" role="button">
-      on line chat <i class="fa fa-download ml-2"/>
-    </a>
-    <a class="btn btn-outline-white waves-effect waves-light" href="" target="_blank" role="button">
-      Start free trial <i class="fa fa-graduation-cap ml-2"/>
-    </a>
-  </div>
-  <!--/.Call to action-->
   <hr class="my-4"/>
   <!-- Social icons -->
   <div class="pb-4">
-    <a href="" target="_blank">
+    <a href="javascript:void(0);" target="_blank">
       <i class="fa fa-facebook mr-3"/>
     </a>
-    <a href="" target="_blank">
+    <a href="javascript:void(0);" target="_blank">
       <i class="fa fa-twitter mr-3"/>
     </a>
-    <a href="" target="_blank">
+    <a href="javascript:void(0);" target="_blank">
       <i class="fa fa-youtube mr-3"/>
     </a>
-    <a href="" target="_blank">
-      <i class="fa fa-google-plus mr-3"/>
+    <a href="javascript:void(0);" target="_blank">
+      <i class="fa fa-weixin mr-3"/>
     </a>
-    <a href="" target="_blank">
-      <i class="fa fa-dribbble mr-3"/>
-    </a>
-    <a href="" target="_blank">
-      <i class="fa fa-pinterest mr-3"/>
-    </a>
-    <a href="" target="_blank">
-      <i class="fa fa-github mr-3"/>
-    </a>
-    <a href="" target="_blank">
-      <i class="fa fa-codepen mr-3"/>
+    <a href="javascript:void(0);" target="_blank">
+      <i class="fa fa-instagram mr-3"/>
     </a>
   </div>
   <!-- Social icons -->
   <!--Copyright-->
   <div class="footer-copyright py-3">
     © 2018 Copyright:
-    <a href="" target="_blank">VanDoctor.ca</a>
+    <a href="javascript:void(0);" target="_blank">www.liaoshi.ca</a>
   </div>
   <!--/.Copyright-->
 </footer>
