--- a/routes/index/components/container/components/introduction/index.marko
+++ b/routes/index/components/container/components/introduction/index.marko
@@ -14,8 +14,9 @@
       <p>本馆拥有全球顶尖数字化设备</p>
       <!-- Main heading -->
       <hr/>
-      <p>创始人廖医生出生于北京医学世家, 毕业于北京中医药大学针灸专业</p>
-      <p>拥有超20年针灸执业经验, 历任温哥华中医针灸协会会长</p>
+      <p>创始人廖医生出生于北京医学世家, 毕业于首都医科大学中医专业</p>
+      <p>师从国医大师贺普仁，拥有超20年针灸执业经验</p>
+      <p>历任温哥华中医针灸协会会长</p>
       <!-- CTA -->
       <a href="/OnlineChat" class="btn btn-grey btn-md waves-effect waves-light">
         在线咨询 <i class="fa fa-comments ml-1"/>
