--- a/routes/index/index.marko
+++ b/routes/index/index.marko
@@ -6,7 +6,7 @@
   <@scripts>
     <script src="/dist/bundle.js"/>
   </@scripts>
-  <@title>Van Doctor Marko</@title>
+  <@title>Doctor Liao</@title>
   <@body>
     <navbar/>
     <carousel/>
