--- a/routes/index/components/navbar/index.marko
+++ b/routes/index/components/navbar/index.marko
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
-    <a class="navbar-brand" href="" target="_blank">
+    <a class="navbar-brand" href="javascript:void(0);">
       <strong>廖氏</strong>
     </a>
   </div>
