--- a/routes/index/index.marko
+++ b/routes/index/index.marko
@@ -1,6 +1,7 @@
 <site-layout>
   <@styles>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="shortcut icon" type="image/png" href="dist/img/favicons/bear.png"/>
     <link href="/dist/style.css" media="all" rel="stylesheet"/>
   </@styles>
   <@scripts>
