change folder layout

--- a/components/navbar/index.marko
+++ b/components/navbar/index.marko
@@ -1,3 +1,8 @@
+class {
+  debugClick() {
+    console.log("debug click")
+  }
+}
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
     <a class="navbar-brand" href="javascript:void(0);">
