--- a/components/site-layout/index.marko
+++ b/components/site-layout/index.marko
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <title>
       <${input.title}/>
     </title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <${input.styles}/>
   </head>
-  <body class=input.class>
+  <body>
     <${input.body}/>
     <${input.scripts}/>
     <browser-refresh enabled=true/>
